# flagship

./: .browserslistrc  .dockerignore  .electron-vendors.cache.json  .env  .env.example  .env.save  .gitignore  .gitmodules  .mcp.json  .nano-staged.js  .pre-commit-config.yaml  AbstractID3Parser-lOVED_iU.js  AiffParser-DzydMiqS.js  AsfParser-CWEHjcF2.js  CHANGELOG.md  CITADEL_DHT_INTEGRATION_PLAN.md  CLAUDE.md  CNAME  Cargo.toml  DHT_PEEREXC_COMPATIBILITY_ASSESSMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.lens-node  Dockerfile.production  DsdiffParser-D8qZxdcl.js  DsfParser-DI8BoB60.js  FLAGSHIP_V0.7.2_IMPLEMENTATION_COMPLETE.md  FlacParser-Bykz-1QM.js  ID3v2Parser-XGFaHk5l.js  LENS-DHT-INTEGRATION-SPEC.md  LOCAL_SEARCH_PLAN.md  MP4Parser-Dww6HJAK.js  MatroskaParser-VTGBw0lL.js  MpegParser-v8INMzRG.js  MusepackParser-BxU5STfC.js  OggParser-oqd07dhd.js  P2P_INTEGRATION_COMPLETE.md  README.md  VBreadcrumbs-DhxuWpcB.js  VBreadcrumbs-i3pLGJFc.css  (+595 more)
.claude/: settings.local.json
.lens-node-data/: admin_keys.json
.palace/: links.yaml
crates/: consensus-bft  consensus-common  consensus-crypto  consensus-peerexc  consensus-proofs  consensus-tgp
crates/lens-v2-node/: .dockerignore  CONTEXT.md  Cargo.toml  DELETE_BLOCK_SYSTEM.md  DEPLOY_41_NODES.md  DHT_ANNOUNCEMENTS_REPORT.md  DHT_INTEGRATION.md  DHT_TEST_RESULTS.md  Dockerfile  Dockerfile.build-in-docker  Dockerfile.cluster  Dockerfile.haproxy  Dockerfile.prebuilt  Dockerfile.prebuilt-binary  Dockerfile.runtime  Dockerfile.simple  HA_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  IPFS_PIN_NAMING.md  P2P_SYNC_STATUS.md  README.md  SPORE_WANTLIST_SPEC.md  STATELESS_DEPLOYMENT.md  UBTS_AND_PROOF_OF_ERASURE.md  UBTS_ARCHITECTURE.md  UPLOAD_API.md  anycast-nginx-41.conf  anycast-nginx.conf  deploy-41-nodes.sh  docker-compose-41.yml  docker-compose-backend.yml  docker-compose-cluster.yml  docker-compose-single.yml  docker-compose.yml  generate-compose.sh  haproxy-backend.cfg  haproxy-simple.cfg  haproxy-single.cfg  haproxy.cfg  nginx-example.conf  (+8 more)
crates/lens-v2-node/.lens-node-data/: admin_keys.json
crates/lens-v2-node/.lens-node-data/rocksdb/: IDENTITY  LOG  LOG.old.1760057060269885
crates/lens-v2-node/bootstrap-peer/: Caddyfile  docker-compose.yml
crates/lens-v2-node/deployment/: lens-node.service  moosefs-setup.sh
crates/lens-v2-node/examples/: test_spore_sync.rs
crates/lens-v2-node/src/: audio_metadata.rs  auth.rs  block_codec.rs  cluster_config.rs  consensus_bitmap.rs  db.rs  delete_block.rs  dht_announcements.rs  dht_encryption.rs  dht_messaging.rs  dht_state.rs  distributed_dht.rs  latency.rs  lazy_node.rs  lib.rs  main.rs  p2p_heartbeat.rs  peer_registry.rs  site_identity.rs  slot_identity.rs  spore_wantlist.rs  sync_mode.rs  sync_orchestrator.rs  tgp.rs  ubts.rs  ubts_codec.rs  webrtc_manager.rs
crates/lens-v2-node/src/routes/: account.rs  categories.rs  dht.rs  featured.rs  health.rs  import_export.rs  map.rs  mod.rs  myfiles.rs  persistence.rs  relay.rs  releases.rs  schemas.rs  site.rs  structures.rs  sync.rs  ubts.rs  upload.rs
crates/lens-v2-node/src/storage/: dht_storage.rs  mod.rs
crates/lens-v2-node/tests/: ABSURD_MESH_TEST.md  DHT_INTEGRATION_TEST_REPORT.md  absurd_mesh_test.rs  cas_hexagonal_spiral_test.rs  configurable_mesh_test.rs  content_addressed_slots_test.rs  dht_bootstrap_test.rs  dht_consistency_test.rs  dht_integration_test.rs  dht_integration_tests.rs  dht_network_operations_test.rs  dht_network_routing_test.rs  dht_routing_test.rs  dht_webrtc_routing_test.rs  dynamic_mesh_test.rs  featured_test.rs  health_test.rs  hexagonal_mesh_test.rs  latency_probing_test.rs  map_dht_query_test.rs  massive_mesh_test.rs  mesh-visualizer-hexagonal-canvas.html  mesh-visualizer-scalable.html  mesh-visualizer.html  multi_node_sync.rs  multi_segment_mesh_test.rs  neighbor_discovery_dht_test.rs  peer_discovery_test.rs  peer_id_test.rs  relay_bootstrap_test.rs  relay_wantlist_test.rs  schema_test.rs  slot_announcement_storage_test.rs  slot_claim_consensus_test.rs  slot_ownership_announcement_test.rs  spore_wantlist_test.rs  test_helpers.rs  ubts_spore_wantlist_test.rs  upload_release_test.rs  webrtc_datachannel_test.rs
crates/lens-v2-node/tests/hex-viz/: README.md  index.html  package.json
crates/lens-v2-node/tests/hex-viz/src/: App.vue
crates/lens-v2-node/tests/hex-viz/src/components/: ControlPanel.vue  Header.vue  HexRenderer.vue  Toast.vue
crates/lens-v2-p2p/: Cargo.toml
crates/lens-v2-p2p/src/: lib.rs  manager.rs  native.rs  network.rs  spore.rs  sync.rs  wasm.rs
crates/lens-v2-sdk/: CONTENT_TYPES.md  Cargo.toml
crates/lens-v2-sdk/src/: lib.rs
crates/lens-v2-sdk/src/models/: content_item.rs  content_types.rs  metadata.rs  mod.rs  release.rs
crates/lens-v2-sdk/src/schema/: mod.rs  registry.rs  version.rs
crates/lens-v2-wasm/: Cargo.toml
crates/lens-v2-wasm/src/: dht_minimal.rs  lib.rs  tgp_udp.rs  ubts.rs
docker/: .dockerignore  .env.dev  .env.docker.dev.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.citadel-node  Dockerfile.dev  Dockerfile.lighttpd  Dockerfile.prebuilt  Dockerfile.preview  README.md  cluster.py  docker-compose.dev.yml  docker-compose.preview.yml  docker-entrypoint.sh  haproxy-dev.cfg  lighttpd.conf  nginx.conf  riffstack.py
docs/: DHT_ROUTING_ENHANCEMENTS.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  STRUCTURES.md  UPLOAD_SERVICE.md  citadel-dht-spore-integration.md  lens_nginx.conf  lens_ngixn.conf  spore-consistency-analysis.md
peerbit/: anystore-opfs-worker.min.js  rateless_iblt_bg.wasm  sqlite3.min.js
scripts/: start-lens1.sh  start-lens2.sh  update-peerbit-vendors.mjs
tests/: benchmark.spec.ts  cache-demo.spec.ts  cache-performance-simple.spec.ts  cache-performance.spec.ts  capture-releases.spec.ts  content-verification-benchmark.spec.ts  debug-releases.spec.ts  detailed-benchmark.spec.ts  dev-server-benchmark.spec.ts  direct-cache-test.spec.ts  e2e.spec.ts  fast-benchmark.spec.ts  federation-stress-test.spec.ts  federation.spec.ts  final-performance-summary.spec.ts  fresh-load-benchmark.spec.ts  http-benchmark.spec.ts  minimal-main.js  (+13 more)
(+27 files in other folders)
