[workspace]
members = [
    "crates/lens-v2-sdk",
    "crates/lens-v2-node",
    "crates/lens-v2-p2p",
    "crates/lens-v2-wasm",
    "packages/epub-wasm",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Testing
mockall = "0.13"
