[package]
name = "lens-v2-node"
version = "0.1.0"
edition = "2021"
authors = ["Riff.CC Team"]
description = "Lens Node v2 - High-performance Rust backend with P2P capabilities"
license = "MIT OR Apache-2.0"

[[bin]]
name = "lens-node"
path = "src/main.rs"

[dependencies]
# SDK
lens-v2-sdk = { path = "../lens-v2-sdk" }
lens-v2-p2p = { path = "../lens-v2-p2p" }
consensus-peerexc = { path = "../../../pal/crates/consensus/peerexc" }

# HTTP server
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async streams
futures = "0.3"

# Random IDs
rand = "0.8"

[dev-dependencies]
# Testing
mockall = { workspace = true }
hyper = "1.0"
