[package]
name = "lens-v2-node"
version = "0.8.36"
edition = "2021"
authors = ["Riff.CC Team"]
description = "Lens Node v2 - High-performance Rust backend with P2P capabilities"
license = "AGPL-3.0-or-later"

[lib]
name = "lens_node"
path = "src/lib.rs"

[[bin]]
name = "lens-node"
path = "src/main.rs"

[dependencies]
# SDK
lens-v2-sdk = { path = "../lens-v2-sdk" }
lens-v2-p2p = { path = "../lens-v2-p2p" }
consensus-peerexc = { path = "../../../palace/crates/consensus/peerexc" }

# Citadel DHT for hexagonal routing
citadel-core = { path = "../../../citadel/crates/citadel-core" }
citadel-dht = { path = "../../../citadel/crates/citadel-dht" }

# HTTP server
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async streams
futures = "0.3"

# WebRTC for browser peer connections
webrtc = "0.11"

# Cryptography
hex = "0.4"
sha2 = "0.10"
blake3 = "1.8"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.2"
bs58 = "0.5"

# Random IDs
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }

# System info
hostname = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Database
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# Audio metadata extraction
symphonia = { version = "0.5", features = ["all"] }
lofty = "0.21"

[dev-dependencies]
# Testing
mockall = { workspace = true }
hyper = "1.0"
tempfile = "3.23.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
