[package]
name = "lens-v2-p2p"
version = "0.1.0"
edition = "2021"
authors = ["Riff.CC Team"]
description = "Pure Rust P2P layer with BFT consensus and TGP - WASM-optimized < 500KiB"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# SDK
lens-v2-sdk = { path = "../lens-v2-sdk" }

# Consensus crates (symlinked from palace)
consensus-bft = { path = "../../../palace/crates/consensus/bft", optional = true }
consensus-tgp = { path = "../../../palace/crates/consensus/tgp", optional = true }
consensus-common = { path = "../../../palace/crates/consensus/common", optional = true }
consensus-peerexc = { path = "../../../palace/crates/consensus/peerexc", optional = true }

# Citadel DHT for peer discovery
citadel-core = { path = "../../../citadel/crates/citadel-core", optional = true }

# Serialization (minimal, wasm-friendly)
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"

# Error handling (minimal)
thiserror = { workspace = true }

# Async (wasm-compatible)
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# WASM bindings
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
] }

# Native async runtime (not included in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
# Testing (not compiled into WASM)
wasm-bindgen-test = "0.3"

[features]
default = ["consensus", "network"]
# Consensus support (BFT + TGP + PeerExc)
consensus = ["consensus-bft", "consensus-tgp", "consensus-common", "consensus-peerexc"]
# DHT-based peer discovery via Citadel
dht = ["citadel-core"]
# Network support with WebSocket
network = ["tokio", "tokio-tungstenite", "dht"]
# Optional tokio support for native builds
tokio-runtime = ["tokio"]
