[package]
name = "lens-v2-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3    # Maximum optimization for speed
lto = "fat"      # Aggressive Link Time Optimization
codegen-units = 1  # Single codegen unit for maximum optimization
strip = true     # Strip symbols for smaller binary
panic = "abort"  # Abort on panic (smaller + faster)

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    # WebRTC features for direct P2P with TGP packet format
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceTransportPolicy",
    # Fetch API for direct DHT operations
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
blake3 = "1.8"  # Fast, correct hashing
hex = "0.4"
sha2 = "0.10"   # SHA256 for UBTS
uuid = { version = "1.0", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
